--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start":"node server.js"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "express": "^4.17.3",
+    "serve-static": "^1.14.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
