--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "serve-static": "^1.14.2",
     "vue": "^2.6.14",
+    "vue-loader-v15": "0.0.1-security",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
